# desktop-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Containerfile  Dockerfile  Dockerfile.fleet  NOTICE  PLAN-287-blueprint.json  README.md  SECURITY_AUDIT.md  justfile
crates/api-model/: Cargo.toml
crates/api-model/src/: client.rs  lib.rs  signal.rs
crates/application/: Cargo.toml
crates/application/src/: background_tasks.rs  client_tools.rs  conversation_subs.rs  inflight.rs  lib.rs  subagent_executor.rs  subagent_tools.rs
crates/application/tests/: background_tasks.rs  client_tool_turn_loop.rs  client_tool_turn_state.rs  durable_background_tasks.rs  spawn_standalone_agent.rs  spawn_subagent.rs  ws_background_task_wiring.rs
crates/client-common/: Cargo.toml
crates/client-common/src/: auth.rs  cli.rs  client_context.rs  commands.rs  config.rs  connector.rs  dbus_client.rs  lib.rs  minter.rs  signal.rs  system_id.rs  timeouts.rs  transport.rs  types.rs  uds_client.rs  ws_client.rs
crates/client-common/tests/: system_id_handshake.rs  transport_command_channel.rs  transport_timeout.rs  uds_client_tools.rs  uds_real_turn.rs  uds_streaming.rs  uds_transport.rs
crates/client-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/client-ffi/include/: adele_client.h
crates/client-ffi/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: chunking.rs  clock.rs  context_window.rs  error_classify.rs  lib.rs  planning.rs  sanitize.rs  service.rs  skill_catalog.rs  system_id.rs  tools.rs
crates/core/tests/: cancellation.rs
crates/daemon/: Cargo.toml
crates/daemon/data/: model_defaults.toml
crates/daemon/src/: api_surface.rs  app.rs  backend_reasoning.rs  classifying_llm.rs  config.rs  connections.rs  embedding_probe.rs  knowledge_service.rs  main.rs  maintenance_service.rs  mcp_token_store.rs  model_defaults.rs  notifications.rs  provider_reindex.rs  purposes.rs  registry.rs  routing_llm.rs  settings_service.rs  skill_scanner.rs  store.rs  tls.rs  transports.rs
crates/daemon/tests/: architecture.rs  conversation.rs
crates/dbus-bridge/: Cargo.toml
crates/dbus-bridge/src/: adapter.rs  lib.rs  main.rs  minter.rs  session.rs  transport.rs
crates/dbus-bridge/tests/: background_tasks.rs  bridge.rs  introspection.rs
crates/dbus-interface/: Cargo.toml
crates/dbus-interface/src/: commands.rs  connections.rs  conversation.rs  knowledge.rs  lib.rs  reload.rs  settings.rs
crates/jwt-minter/: Cargo.toml  README.md
crates/jwt-minter/src/: config.rs  group.rs  lib.rs  main.rs  peer.rs  request.rs  server.rs
crates/jwt-minter/tests/: integration.rs
crates/llm-anthropic/: Cargo.toml
crates/llm-anthropic/src/: lib.rs
crates/llm-azure/: Cargo.toml
crates/llm-azure/src/: lib.rs
crates/llm-bedrock/: Cargo.toml
crates/llm-bedrock/src/: lib.rs  tool_names.rs
crates/llm-http/: Cargo.toml
crates/llm-http/src/: cache.rs  lib.rs  models.rs  streaming.rs
crates/llm-http/tests/: model_cache.rs
crates/llm-ollama/: Cargo.toml
crates/llm-ollama/src/: lib.rs
crates/llm-openai/: Cargo.toml
crates/llm-openai/src/: lib.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: builtin.rs  config.rs  executor.rs  jsonrpc.rs  lib.rs  oauth.rs
crates/mcp-client/tests/: default_fleet_config.rs  e2e_dynamic_list_changed.rs  e2e_fileio.rs  http_transport.rs  oauth.rs  robustness.rs  service_account.rs
crates/peer-cred/: Cargo.toml
crates/peer-cred/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage-sqlite/: Cargo.toml  DESIGN.md
crates/storage-sqlite/migrations/: 001_relational_schema.sql  002_skill_index.sql
crates/storage-sqlite/src/: background_tasks.rs  context_window_observations.rs  conversation.rs  error_classifications.rs  idempotency_keys.rs  lib.rs  pool.rs  skill_index.rs  turn_state.rs
crates/storage-sqlite/tests/: background_tasks.rs  context_window_observations.rs  conversation.rs  error_classifications.rs  idempotency_keys.rs  skill_index.rs  turn_state.rs
crates/storage/bootstrap/: rls_role.sql
crates/storage/migrations/: 001_initial_schema.sql  002_vector_tables.sql  002b_tool_definitions.sql  003_vector_indexes.sql  004_embedding_model_tracking.sql  005_uuidv7_ids.sql  006_dreaming_watermarks.sql  007_chunked_embeddings.sql  008_message_summaries.sql  009_conversation_archived_at.sql  010_fix_damaged_embeddings.sql  011_conversation_last_model.sql  012_conversation_active_task.sql  013_conversation_message_fts.sql  014_tag_registry.sql  015_knowledge_base_review_columns.sql  016_multi_tenant_user_id.sql  017_turn_state.sql  018_background_tasks.sql  019_scratchpads.sql  020_scratchpad_type_sequence_done.sql  021_message_fts_guard.sql  022_error_classifications.sql  023_idempotency_keys.sql  024_conversation_personality.sql  025_context_window_observations.sql  026_knowledge_base_source_and_embedding_freshness.sql  027_conversation_tags.sql  028_context_window_success_watermark.sql  029_rls_backstop.sql  030_tool_definitions_provider.sql  031_scratchpad_owner_todo.sql  032_subagent_task_columns.sql  033_message_idempotency_key.sql  033_skill_index.sql  035_skill_presence.sql
crates/storage/src/: background_tasks.rs  context_window_observations.rs  conversation.rs  conversation_search.rs  database.rs  dreaming.rs  embedding_backfill.rs  error_classifications.rs  idempotency_keys.rs  kb_metadata.rs  knowledge.rs  lib.rs  migrate_json.rs  pool.rs  scratchpad.rs  skill_index.rs  tag_normalize.rs  tag_registry.rs  tool_registry.rs  turn_state.rs
crates/storage/tests/: audit_user_id_scoping.rs  context_window_observations.rs  conversation_list_projection.rs  conversation_message_search.rs  conversation_persistence.rs  database_query_user_id_scoping.rs  db_query_two_tenant_isolation.rs  dreaming_db_paths.rs  embedding_backfill_retry.rs  embedding_fingerprint.rs  error_classification_store.rs  (+13 more)
crates/transport-dispatch/: Cargo.toml
crates/tui/: Cargo.toml
crates/uds-interface/: Cargo.toml
crates/ws-interface/: Cargo.toml
(+258 files in other folders)
