[workspace]
resolver = "3"
members = [
    "crates/api-model",
    "crates/application",
    "crates/ws-interface",
    "crates/core",
    "crates/dbus-interface",
    "crates/daemon",
    "crates/llm-openai",
    "crates/llm-bedrock",
    "crates/llm-anthropic",
    "crates/llm-ollama",
    "crates/llm-http",
    "crates/mcp-client",
    "crates/storage",
    "crates/client-common",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }

desktop-assistant-core = { path = "crates/core" }
desktop-assistant-dbus = { path = "crates/dbus-interface" }
desktop-assistant-llm-anthropic = { path = "crates/llm-anthropic" }
desktop-assistant-llm-openai = { path = "crates/llm-openai" }
desktop-assistant-llm-ollama = { path = "crates/llm-ollama" }
desktop-assistant-llm-bedrock = { path = "crates/llm-bedrock" }
desktop-assistant-llm-http = { path = "crates/llm-http" }
desktop-assistant-mcp-client = { path = "crates/mcp-client" }
desktop-assistant-storage = { path = "crates/storage" }
desktop-assistant-client-common = { path = "crates/client-common" }
serde_json = "1"
toml = "1"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
chrono = { version = "0.4", features = ["clock"] }
