[workspace]
resolver = "3"
members = [
    "crates/api-model",
    "crates/application",
    "crates/frame-codec",
    "crates/auth-jwt",
    "crates/ws-interface",
    "crates/core",
    "crates/daemon",
    "crates/llm-openai",
    "crates/llm-bedrock",
    "crates/llm-anthropic",
    "crates/llm-ollama",
    "crates/llm-http",
    "crates/mcp-client",
    "crates/storage",
    "crates/client-common",
    "crates/jwt-minter",
    "crates/transport-dispatch",
    "crates/uds-interface",
    "crates/dbus-bridge",
    "crates/client-ffi",
]

# Warnings are failures, enforced by the compiler — not by reviewer vigilance.
# Members inherit via `[lints] workspace = true`. Safe against toolchain churn
# because the workspace pins its Rust toolchain.
[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[workspace.dependencies]
notify = "8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
zbus = { version = "5", default-features = false, features = ["tokio"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }

desktop-assistant-core = { path = "crates/core" }
desktop-assistant-auth-jwt = { path = "crates/auth-jwt" }
desktop-assistant-llm-anthropic = { path = "crates/llm-anthropic" }
desktop-assistant-llm-openai = { path = "crates/llm-openai" }
desktop-assistant-llm-ollama = { path = "crates/llm-ollama" }
desktop-assistant-llm-bedrock = { path = "crates/llm-bedrock" }
desktop-assistant-llm-http = { path = "crates/llm-http" }
desktop-assistant-mcp-client = { path = "crates/mcp-client" }
desktop-assistant-storage = { path = "crates/storage" }
desktop-assistant-client-common = { path = "crates/client-common" }
desktop-assistant-transport-dispatch = { path = "crates/transport-dispatch" }
desktop-assistant-uds = { path = "crates/uds-interface" }
desktop-assistant-frame-codec = { path = "crates/frame-codec" }
serde_json = "1"
toml = "1"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pki-types = { version = "1", features = ["std"] }
tokio-rustls = "0.26"
chrono = { version = "0.4", features = ["clock"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["aws_lc_rs", "use_pem"] }

# Release profiles. Default favors small, fast binaries (strip + thin LTO).
# Build variants: `cargo build --profile release-fast` / `--profile release-small`.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "unwind"

[profile.release-fast]
inherits = "release"
lto = "fat"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "abort"
strip = true
