[package]
name = "desktop-assistant-application"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
desktop-assistant-auth-jwt.workspace = true
desktop-assistant-core.workspace = true
desktop-assistant-api-model = { path = "../api-model" }
thiserror.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio-util.workspace = true
uuid = { version = "1", features = ["v4"] }

[dependencies.tokio]
workspace = true
features = ["sync", "rt", "macros"]

[dev-dependencies]
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
serde_json.workspace = true

[lints]
workspace = true
