[package]
name = "desktop-assistant-client-common"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[features]
default = ["dbus"]
dbus = ["dep:zbus"]

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
desktop-assistant-api-model = { path = "../api-model" }
futures = "0.3"
reqwest = { version = "0.13", features = ["json"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

[dependencies.zbus]
workspace = true
optional = true
