[package]
name = "desktop-assistant-client-common"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[features]
default = ["dbus"]
dbus = ["dep:zbus"]
# Opt-in `TransportArgs` clap argument group for CLI clients.
clap = ["dep:clap"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = { version = "4", features = ["derive"], optional = true }
desktop-assistant-api-model = { path = "../api-model" }
futures = "0.3"
reqwest = { version = "0.13", features = ["json"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "net", "io-util", "time"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

[dependencies.zbus]
workspace = true
optional = true

[dev-dependencies]
# Spin up the real UDS server in-process to round-trip through the new
# transport. These are server-side crates, so they stay dev-only — production
# clients never link the daemon stack.
desktop-assistant-uds = { path = "../uds-interface" }
desktop-assistant-application = { path = "../application" }
desktop-assistant-core.workspace = true
desktop-assistant-auth-jwt.workspace = true
tempfile = "3"
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "net",
    "io-util",
    "time",
] }
