[package]
name = "desktop-assistant-client-common"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[features]
default = ["dbus"]
dbus = ["dep:zbus"]
# Opt-in `TransportArgs` clap argument group for CLI clients.
clap = ["dep:clap"]
# Opt-in client-side MCP host: run local MCP servers on the edge and expose
# their tools to the daemon as client-side tools. Pulls the stdio MCP client
# (and `core` transitively); clients that never host MCPs don't compile it.
# The MCP client is taken WITHOUT default features, so its remote-HTTP transport
# (and `reqwest`) is never compiled into edge clients — the host only ever
# spawns local stdio servers.
#
# `dep:mcp-core` brings the `McpService` trait + value types so the host can run
# a built-in server in-process (no subprocess). It is taken WITHOUT default
# features because only the trait and value types are needed, never a transport.
mcp-host = ["dep:desktop-assistant-mcp-client", "dep:mcp-core", "dep:toml"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = { version = "4", features = ["derive"], optional = true }
desktop-assistant-api-model = { path = "../api-model" }
desktop-assistant-mcp-client = { path = "../mcp-client", optional = true, default-features = false }
desktop-assistant-frame-codec = { workspace = true }
# First-party (adelie-ai) MCP core: only the `McpService` trait + value types
# for in-process built-in servers. No default features -> no transport crates.
mcp-core = { git = "https://github.com/adelie-ai/mcp-core", rev = "448b0e4a3e4dbfb04d56423d41077f0b114e6143", default-features = false, optional = true }
futures = "0.3"
# GECOS full-name lookup via `getpwuid_r` for the client's real name (#549),
# mirroring the daemon's `peer-cred` approach. Already in the workspace tree.
libc = "0.2"
# The client's local IANA timezone (#549) — the highest-value context field.
# Lean and already present transitively in the lockfile.
iana-time-zone = "0.1"
reqwest = { version = "0.13", features = ["json"] }
serde = { workspace = true }
serde_json.workspace = true
toml = { version = "1", optional = true }
tokio = { workspace = true, features = ["sync", "net", "io-util", "time"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
# Public trust anchors for outbound `wss://`. Already in the tree via
# tokio-tungstenite's `rustls-tls-webpki-roots`; named directly because the
# client layers its own CA on top of these roots rather than replacing them.
webpki-roots = "1"
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

[dependencies.zbus]
workspace = true
optional = true

[dev-dependencies]
# Spin up the real UDS server in-process to round-trip through the new
# transport. These are server-side crates, so they stay dev-only — production
# clients never link the daemon stack.
desktop-assistant-uds = { path = "../uds-interface" }
desktop-assistant-application = { path = "../application" }
desktop-assistant-core.workspace = true
desktop-assistant-auth-jwt.workspace = true
# Mint throwaway CA certificates so the trust-store tests assert against real
# DER, not hand-pasted fixtures. Already in the tree — `daemon` uses it to
# generate the local CA these tests stand in for.
rcgen = "0.14"
tempfile = "3"
# Parse a client config TOML in tests to assert the `share_client_context`
# serde default (#549). `toml` is already an optional runtime dep (mcp-host).
toml = "1"
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "net",
    "io-util",
    "time",
] }

[lints]
workspace = true
