[package]
name = "desktop-assistant-client-ffi"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

# A self-contained shared object (cdylib) for non-Rust embedders (the adele-kde
# Qt wrapper loads it), plus staticlib for a fully-static link if a consumer
# prefers it. Rust deps link statically into the artifact, so nothing extra
# needs installing on the target machine.
[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# UDS-direct: the same Connector path gtk/tui use. default-features = false drops
# client-common's `dbus` feature (zbus) — there is no D-Bus in this data path.
desktop-assistant-client-common = { path = "../client-common", default-features = false }
desktop-assistant-api-model = { path = "../api-model" }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }

[lints]
workspace = true
