[package]
name = "desktop-assistant-core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
async-trait.workspace = true
backon = "1"
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json = "1"
chrono.workspace = true
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
