[package]
name = "desktop-assistant-core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
async-trait.workspace = true
backon = "1"
desktop-assistant-auth-jwt.workspace = true
desktop-assistant-protocol.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json = "1"
serde_yaml_ng = "0.10"
sha2 = "0.10"
# `serde`: `IndexedSkill::last_seen_at` is a `DateTime<Utc>` on a serialized
# domain type. No new dependency -- chrono is already a workspace dep.
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["time"] }
tokio-util.workspace = true
uuid = { version = "1", features = ["v4", "v7"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
