[package]
name = "desktop-assistant-daemon"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
desktop-assistant-application = { path = "../application" }
desktop-assistant-ws = { path = "../ws-interface" }
desktop-assistant-core.workspace = true
desktop-assistant-dbus.workspace = true
desktop-assistant-llm-anthropic.workspace = true
desktop-assistant-llm-openai.workspace = true
desktop-assistant-llm-ollama.workspace = true
desktop-assistant-llm-bedrock.workspace = true
desktop-assistant-mcp-client.workspace = true
tokio.workspace = true
zbus.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
keyring = "3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
