[package]
name = "desktop-assistant-daemon"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
desktop-assistant-application = { path = "../application" }
desktop-assistant-ws = { path = "../ws-interface", features = ["tls"] }
desktop-assistant-core.workspace = true
desktop-assistant-dbus.workspace = true
desktop-assistant-llm-anthropic.workspace = true
desktop-assistant-llm-openai.workspace = true
desktop-assistant-llm-ollama.workspace = true
desktop-assistant-llm-bedrock.workspace = true
desktop-assistant-mcp-client.workspace = true
desktop-assistant-storage.workspace = true
tokio.workspace = true
zbus.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = { workspace = true, features = ["preserve_order"] }
thiserror.workspace = true
indexmap = { version = "2", features = ["serde"] }
chrono.workspace = true
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }
keyring = "3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
libc = "0.2"
zeroize = "1"
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
time = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
httpmock = "0.8"
