[package]
name = "desktop-assistant-daemon"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
desktop-assistant-application = { path = "../application" }
desktop-assistant-ws = { path = "../ws-interface", features = ["tls"] }
desktop-assistant-uds = { path = "../uds-interface" }
desktop-assistant-core.workspace = true
desktop-assistant-llm-anthropic.workspace = true
desktop-assistant-llm-openai.workspace = true
desktop-assistant-llm-ollama.workspace = true
desktop-assistant-llm-bedrock.workspace = true
desktop-assistant-llm-openrouter.workspace = true
desktop-assistant-llm-azure.workspace = true
desktop-assistant-llm-google.workspace = true
desktop-assistant-mcp-client.workspace = true
desktop-assistant-storage.workspace = true
tokio.workspace = true
tokio-util.workspace = true
notify.workspace = true
zbus.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = { workspace = true, features = ["preserve_order"] }
thiserror.workspace = true
indexmap = { version = "2", features = ["serde"] }
# Non-poisoning RwLock for RegistryHandle (DT-9 / #276): a panic while a
# holder has the lock must not poison it and cascade into every later access.
parking_lot = "0.12"
chrono.workspace = true
async-trait.workspace = true
uuid = { version = "1", features = ["v4", "v7"] }
# keyring v4 split the library out into `keyring-core` (the API) plus
# per-backend store crates. We talk to the system Secret Service in-process
# via the zbus-based store, matching the daemon's existing zbus/tokio stack
# (no libdbus C dep) and the `crypto-rust` choice used by the TUI/GTK clients.
keyring-core = "1"
zbus-secret-service-keyring-store = { version = "1", features = ["rt-tokio-crypto-rust"] }
jsonwebtoken.workspace = true
desktop-assistant-auth-jwt.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
libc = "0.2"
subtle = "2"
zeroize = "1"
rcgen.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tokio-rustls.workspace = true
# 0.3.48 emits conflicting `From` impls that break coherence (E0119) against any
# blanket `impl<T> From<T>` (e.g. aws-smithy-types CanDisable, rcgen DnValue).
# cargo unifies `time` to one version graph-wide, so this bound guards all crates.
# Re-widen once a fixed release (>=0.3.49) is out.
time = ">=0.3, <0.3.48"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
httpmock = "0.8"

[lints]
workspace = true
