[package]
name = "desktop-assistant-dbus-bridge"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "adelie-dbus-bridge"
path = "src/main.rs"

[lib]
name = "desktop_assistant_dbus_bridge"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = { version = "4", features = ["derive", "env"] }
desktop-assistant-api-model = { path = "../api-model" }
desktop-assistant-client-common = { path = "../client-common" }
desktop-assistant-frame-codec = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1", features = ["v4"] }
zbus.workspace = true

[dev-dependencies]
async-trait.workspace = true
desktop-assistant-auth-jwt.workspace = true
futures-util = "0.3"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
zbus = { version = "5", default-features = false, features = ["tokio", "p2p"] }

[lints]
workspace = true
