[package]
name = "desktop-assistant-dbus"
version = "0.1.0"
edition = "2024"

[dependencies]
desktop-assistant-core.workspace = true
zbus.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
