[package]
name = "desktop-assistant-dbus"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
desktop-assistant-core.workspace = true
zbus.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
