[package]
name = "desktop-assistant-dbus"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
desktop-assistant-core.workspace = true
desktop-assistant-application = { path = "../application" }
desktop-assistant-api-model = { path = "../api-model" }
zbus.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
