[package]
name = "desktop-assistant-jwt-minter"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "adelie-mint"
path = "src/main.rs"

[lib]
name = "desktop_assistant_jwt_minter"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
desktop-assistant-auth-jwt = { path = "../auth-jwt" }
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
