[package]
name = "desktop-assistant-llm-anthropic"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
desktop-assistant-core.workspace = true
reqwest = { version = "0.12", features = ["stream", "json"] }
serde.workspace = true
serde_json = "1"
tracing.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
