[package]
name = "desktop-assistant-llm-azure"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
async-trait.workspace = true
desktop-assistant-core.workspace = true
desktop-assistant-llm-http.workspace = true
desktop-assistant-llm-openai-compat.workspace = true
reqwest = { version = "0.13", features = ["stream", "json"] }
serde.workspace = true
serde_json = "1"
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
httpmock = "0.8"

[lints]
workspace = true
