[package]
name = "desktop-assistant-llm-http"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
desktop-assistant-core.workspace = true
reqwest = { version = "0.13", default-features = false }
tokio = { workspace = true }
tokio-stream = "0.1"
tokio-util.workspace = true

[features]
# Shared test harnesses (`StallingStream`, `step_name`) for the connector
# crates' stall-loop tests. Off by default; providers enable it as a
# dev-dependency feature.
test-util = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
httpmock = "0.8"
reqwest = { version = "0.13" }
serde_json = "1"

[lints]
workspace = true
