[package]
name = "desktop-assistant-llm-ollama"
version = "0.1.0"
edition = "2024"

[dependencies]
desktop-assistant-core.workspace = true
reqwest = { version = "0.12", features = ["stream", "json"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
