[package]
name = "desktop-assistant-llm-ollama"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
desktop-assistant-core.workspace = true
reqwest = { version = "0.13", features = ["stream", "json"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream = "0.1"

[dev-dependencies]
httpmock = "0.8"
tokio = { workspace = true, features = ["test-util", "macros"] }
