[package]
name = "desktop-assistant-llm-openai"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
bytes = "1"
desktop-assistant-core.workspace = true
reqwest = { version = "0.13", features = ["stream", "json"] }
serde.workspace = true
serde_json = "1"
tracing.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
httpmock = "0.8"
