[package]
name = "desktop-assistant-llm-openai"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
async-trait.workspace = true
desktop-assistant-core.workspace = true
desktop-assistant-llm-http.workspace = true
eventsource-stream = "0.2"
reqwest = { version = "0.13", features = ["stream", "json"] }
serde.workspace = true
serde_json = "1"
tracing.workspace = true
tokio.workspace = true
tokio-stream = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
httpmock = "0.8"
