[package]
name = "desktop-assistant-mcp-client"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
desktop-assistant-core.workspace = true
serde.workspace = true
serde_json = "1"
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
toml = "1"
chrono.workspace = true
uuid = { version = "1", features = ["v7"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
httpmock = "0.8"

[lints]
workspace = true
