[package]
name = "desktop-assistant-storage"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
desktop-assistant-core.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "json", "chrono"] }
pgvector = { version = "0.4", features = ["sqlx"] }
serde.workspace = true
serde_json = "1"
tracing.workspace = true
chrono.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
