[package]
name = "desktop-assistant-transport-dispatch"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
futures = "0.3"
tokio.workspace = true
uuid = { version = "1", features = ["v4"] }

desktop-assistant-api-model = { path = "../api-model" }
desktop-assistant-application = { path = "../application" }
desktop-assistant-core.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
